# mailscan

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  TASK_TODO.md  TODO_password_broker_retry.md  eml.py  getallfromfields.py  mail2dot.py  mail2timeline.py  mailattachments.py  maildump.py  mailexport.py  mailfrom.py  mailheader.py  mailscan.py  matt.py  plan.md  pyproject.toml  reporting.py  requirements.txt  setup.py  structure.py
.github/: ISSUE_parent_report_suppression.md
Analyzers/: DocxAnalyzer.py  EmailAnalyzer.py  HTMLAnalyzer.py  ICSAnalyzer.py  ImageAnalyzer.py  MboxAnalyzer.py  MsgAnalyzer.py  OLEOfficeAnalyzer.py  OfficeDocumentAnalyzer.py  OfficeRelationshipAnalyzer.py  OfficeXMLAnalyzer.py  PDFAnalyzer.py  PlainTextAnalyzer.py  RARAnalyzer.py  RTFAnalyzer.py  ScriptAnalyzer.py  SevenZipAnalyzer.py  VBAProjectAnalyzer.py  ZipAnalyzer.py  __init__.py  archive_hash.py  base.py  exif.py
Config/: __init__.py  config.py  passwords.py
Utils/: __init__.py  advanced_analysis.py  analyzer_cache.py  filetype.py  ioc_extractor.py  js_analysis.py  js_tools.py  logger.py  ole_package.py  ooxml.py  password_broker.py  received_parser.py  temp_manager.py  vba_extractor.py
matt.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
renderers/: __init__.py  html_renderer.py  json_renderer.py  markdown_renderer.py  rich_renderer.py  text_renderer.py  timeline_renderer.py
testfiles/mbox_samples/: sample.mbox
tests/: test_advanced_analysis.py  test_js_analysis.py  test_js_tools.py  test_ooxml_anomaly.py  test_password_broker.py  test_sample_corpus.py
